--- a/js/package.json
+++ b/js/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "csv-writer": "^1.6.0",
     "p-limit": "^6.1.0",
     "puppeteer": "^23.3.0",
     "puppeteer-extra": "^3.3.6",
